k8s/threadr/overlays/worker/production/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: threadr-worker
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: threadr-worker
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: threadr
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: demo
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: threadr
      ports:
        - protocol: TCP
          port: 4222
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: demo
      ports:
        - protocol: TCP
          port: 4222
